// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly 1`] = `
<Styled(Row)>
  <Styled(Col)
    className=""
    colSize={
      Object {
        "large": 6,
        "medium": 4,
        "small": 3,
      }
    }
    offsetLeft={
      Object {
        "large": "",
        "medium": "",
        "small": "",
      }
    }
    offsetRight={
      Object {
        "small": "",
      }
    }
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="availability-btn "
      color="black"
      id={0}
      onClick={[Function]}
    >
      Available For Future Use
    </Styled(Button)>
  </Styled(Col)>
  <Styled(Col)
    className=""
    colSize={
      Object {
        "large": 6,
        "medium": 4,
        "small": 3,
      }
    }
    offsetLeft={
      Object {
        "large": "",
        "medium": "",
        "small": "",
      }
    }
    offsetRight={
      Object {
        "small": "",
      }
    }
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="availability-btn disable-btn"
      color="black"
      id={1}
      onClick={[Function]}
    >
      Applied to Order
    </Styled(Button)>
  </Styled(Col)>
</Styled(Row)>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with 1 bonus point 1`] = `
<Styled(Row)>
  <Styled(Col)
    className=""
    colSize={
      Object {
        "large": 6,
        "medium": 6,
        "small": 4,
      }
    }
    offsetLeft={
      Object {
        "large": 3,
        "medium": 1,
        "small": 1,
      }
    }
    offsetRight={
      Object {
        "small": 1,
      }
    }
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="availability-btn "
      color="black"
      id={0}
      onClick={[Function]}
    >
      Available For Future Use
    </Styled(Button)>
  </Styled(Col)>
</Styled(Row)>
`;
